--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,7 +1,7 @@
 browser = chrome
 url = https://naveenautomationlabs.com/opencart/
 
-username = naveenanimation20@gmail.com
-password = Selenium@12345
+username = s.gond@gmail.com
+password = Gsrk@61295
 
 headless = false
