--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 			<artifactId>testng</artifactId>
 			<version>6.14.3</version>
 		</dependency>
-		
+		<!-- dependecny of lambok-->
 		<dependency>
     <groupId>org.projectlombok</groupId>
     <artifactId>lombok</artifactId>
